<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
                android:title="@string/info">
                <CheckBoxPreference
                        android:title="@string/incoming"
                        android:defaultValue="true"
                        android:summary="@string/incoming_des"
                        android:key="chkIncoming" />
                <CheckBoxPreference
                        android:title="@string/outgoing"
                        android:defaultValue="true"
                        android:summary="@string/outgoing_des"
                        android:key="chkOutgoing" />
        </PreferenceCategory>
        <PreferenceCategory
                android:title="@string/about">
               <Preference android:title="@string/app_ver" android:summary="@string/author_name"
                        android:key="customPref" />
               <Preference android:title="@string/author_ctc" android:summary="@string/author_email"
                        android:key="customPref1" />
        </PreferenceCategory>
</PreferenceScreen>