<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical" android:background="@color/background_main">
    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/tvPhone" android:text="@string/phone"></TextView>
    <EditText android:layout_height="wrap_content" android:hint="Nhập số điện thoại" android:layout_width="fill_parent" android:id="@+id/txtPhone"></EditText>
    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/tvName" android:text="@string/name"></TextView>
    <EditText android:layout_height="wrap_content" android:hint="Nhập họ tên" android:layout_width="fill_parent" android:id="@+id/txtName"></EditText>
    <TextView android:id="@+id/tvAdd" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/address"></TextView>
    <EditText android:layout_height="wrap_content" android:hint="Nhập địa chỉ" android:layout_width="fill_parent" android:id="@+id/txtAddress"></EditText>
    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:layout_alignParentBottom="true" android:id="@+id/btSave" android:text="@string/save"></Button>
</LinearLayout>
