<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/phone_book_search" android:orientation="horizontal">
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_height="fill_parent" android:layout_width="fill_parent">
        <TextView android:id="@+id/textView1" 
        		  android:layout_alignParentLeft="true" 
        		  android:layout_width="fill_parent" 
        		  android:layout_height="100dip" 
        		  android:gravity="center" 
        		  android:textSize="30dip"
        		  android:textColor="#FFFFFF" android:text="@string/app_name1"></TextView>
        <TextView android:layout_width="wrap_content" android:layout_below="@+id/textView1" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_alignLeft="@+id/textView1" android:layout_alignRight="@+id/textView1" android:gravity="center" android:text="@string/app_ver"></TextView>
        <TextView android:id="@+id/textView3" android:layout_alignParentBottom="true" android:layout_width="fill_parent" android:layout_height="50dip" android:gravity="center" android:text="@string/author_email"></TextView>
    </RelativeLayout>
</LinearLayout>
